Rewrote InstanceManager
- Using a threadsafe list instead of forcing synchronized
- Using a list of instance wrappers (InstanceHolder) so that when an instance is opened, the InstanceHolder object in the list is not replaced but the MinecraftInstance object inside of it is replaced
- Makes heavy usage of streams because they are awesome